Cleanup, improvements.